--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,21 @@
 {
-    "extends": ["next/core-web-vitals"],
-    "rules": {
-      "react/react-in-jsx-scope": "off"
-    }
+  "extends": [
+    "next/core-web-vitals",
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:jsx-a11y/recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "plugins": ["react", "jsx-a11y", "@typescript-eslint"],
+  "parserOptions": {
+    "ecmaVersion": 2021,
+    "sourceType": "module"
+  },
+  "rules": {
+    "react/react-in-jsx-scope": "off", 
+    "react/jsx-uses-react": "off",
+    "react/prop-types": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
   }
-  
+}
