--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
     "@tailwindcss/postcss": "^4",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "eslint": "^9.21.0",
-    "eslint-config-next": "15.2.1",
+    "eslint-config-next": "^15.2.1",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.4",
     "tailwindcss": "^4"
   }
 }
