--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
     "@tailwindcss/postcss": "^4",
-    "eslint": "^9.21.0",
+    "@types/react": "19.0.10",
+    "eslint": "^9.22.0",
     "eslint-config-next": "15.2.1",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "tailwindcss": "^4"
   }
 }
